--- a/OnlineQuizz.Web/OnlineQuizz.Web.Frontend/Views/Shared/_Layout.cshtml
+++ b/OnlineQuizz.Web/OnlineQuizz.Web.Frontend/Views/Shared/_Layout.cshtml
@@ -17,10 +17,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Online Quizz", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>
+                        @Html.ActionLink("Logout", "Logout", "Auth", new { area = "" }, new { @class = "navbar-brand" })
+                    </li>
                 </ul>
             </div>
         </div>
